--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Enhanced Draco Viewer</title>
+    <title>Draco Viewer</title>
+    <link rel="icon" type="image/png" href="drc-viewer.png">
     <style>
         body { 
             margin: 0; 
