updated icon and installer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Draco Viewer</title>
-    <link rel="icon" type="image/png" href="drc-viewer.png">
+    <link rel="icon" type="image/png" href="drc-icon.svg">
     <style>
         body { 
             margin: 0; 
